objects/BLN_Company_Commoditie__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Commodities__c</fullName>
        <label>BLN Commodities</label>
        <referenceTo>BLN_Commodities__c</referenceTo>
        <relationshipLabel>BLN Company Commodities</relationshipLabel>
        <relationshipName>BLN_Company_Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Company__c</fullName>
        <label>BLN Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>BLN Company Commodities</relationshipLabel>
        <relationshipName>BLN_Company_Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_GN_User__c</fullName>
        <label>BLN GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipLabel>BLN Company Commodities</relationshipLabel>
        <relationshipName>BLN_Company_Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_TKT_profile__c</fullName>
        <label>BLN TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Company Commodities</relationshipLabel>
        <relationshipName>BLN_Company_Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Company Commoditie</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>BLN Company Commodity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Company Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>